--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.navbar-item:hover {
+  text-decoration: underline;
+  text-decoration-color: #6495ed;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navigation {
+  font-size: 25px;
+}
+
+/* HomePage.css */
+.building-header-container {
+  background-image: url("/public/images/building.jpg");
+}
+.header-container {
+  background-image: url("/public/images/intro-image.jpg");
+}
+
+.header-container,
+.building-header-container {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #f0f0f0;
+  min-height: 773px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.color-blue {
+  color: #6495ed;
+}
+.background-blue {
+  background-color: #6495ed;
+}
+.card-image {
+  width: 100px;
+  height: 180px;
+}
+
+footer {
+  background-color: #6495ed;
+  margin-top: 20px;
 }
